--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "service.js",
   "dependencies": {
     "express": "^4.16.3",
+    "mongodb": "^3.1.3",
+    "mongoose": "^5.2.9",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node service"
+    "start": "node server"
   },
   "repository": {
     "type": "git",
