--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "back-pointing-poker",
   "version": "1.0.0",
   "description": "",
-  "main": "service.js",
+  "main": "loader.js",
   "dependencies": {
     "express": "^4.16.3",
     "mongodb": "^3.1.3",
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server"
+    "start": "node loader"
   },
   "repository": {
     "type": "git",
