--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.16.3",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.8",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {},
   "scripts": {
