--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "loader.js",
   "dependencies": {
     "express": "^4.16.3",
+    "knex": "^0.19.4",
+    "mysql": "^2.17.1",
     "socket.io": "^2.1.1",
     "sqlite3": "^4.0.9"
   },
