--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "knex": "^0.19.4",
     "mysql": "^2.17.1",
+    "request": "^2.88.0",
     "socket.io": "^2.1.1",
     "sqlite3": "^4.0.9"
   },
