--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node --http-parser=legacy loader.js"
+    "start": "node --http-parser=legacy loader.js",
+    "docker_build": "docker image build -t scrumpoker .",
+    "docker_up": "docker-compose up"
   },
   "repository": {
     "type": "git",
