configuração do docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,23 @@
-version: '3'
+version: '3.7'
 services:
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: scrumpoker
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
   scrumpoker:
     image: scrumpoker
+    depends_on:
+      - db
     ports:
       - 3000:3000
     environment:
-      scrumpoker_connection_string: ${scrumpoker_connection_string}
+    scrumpoker_connection_string: ${scrumpoker_connection_string}
 #networks:
 #  default:
 #    external:
