--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-scrumpoker_connection_string={ "client": "pg", "connection": { "host": "127.0.0.1", "user": "postgres", "password": "postgres", "database": "scrumpoker"}, "searchPath": ["knex", "public"]}
+scrumpoker_connection_string={ "client": "pg", "connection": { "host": "db", "user": "postgres", "password": "postgres", "database": "scrumpoker"}, "searchPath": ["knex", "public"]}
